crates/coglet/src/bridge/snapshots/coglet__bridge__protocol__tests__slot_failed_serializes.snap
---
source: coglet/src/bridge/protocol.rs
expression: resp
---
{
  "type": "failed",
  "id": "pred_123",
  "error": "ValueError: invalid input"
}
