crates/coglet/src/bridge/snapshots/coglet__bridge__protocol__tests__slot_file_output_managed_serializes.snap
---
source: coglet/src/bridge/protocol.rs
expression: resp
---
{
  "type": "file_output",
  "filename": "/tmp/coglet/predictions/pred_123/outputs/0.png",
  "kind": {
    "type": "file_type"
  },
  "mime_type": "image/png",
  "managed": true
}
