crates/coglet/src/bridge/snapshots/coglet__bridge__protocol__tests__slot_file_output_oversized_serializes.snap
---
source: coglet/src/bridge/protocol.rs
expression: resp
---
{
  "type": "file_output",
  "filename": "/tmp/coglet/predictions/pred_123/outputs/spill_abc.json",
  "kind": {
    "type": "oversized"
  },
  "managed": true
}
