crates/coglet/src/bridge/snapshots/coglet__bridge__protocol__tests__slot_file_output_unmanaged_serializes.snap
---
source: coglet/src/bridge/protocol.rs
expression: resp
---
{
  "type": "file_output",
  "filename": "/home/user/model/output.wav",
  "kind": {
    "type": "file_type"
  },
  "managed": false
}
