crates/coglet/src/bridge/snapshots/coglet__bridge__protocol__tests__slot_log_serializes.snap
---
source: coglet/src/bridge/protocol.rs
expression: resp
---
{
  "type": "log",
  "source": "stdout",
  "data": "Processing..."
}
