crates/coglet/src/bridge/snapshots/coglet__bridge__protocol__tests__slot_metric_append_serializes.snap
---
source: coglet/src/bridge/protocol.rs
expression: resp
---
{
  "type": "metric",
  "name": "logprobs",
  "value": -1.2,
  "mode": "append"
}
