crates/coglet/src/bridge/snapshots/coglet__bridge__protocol__tests__slot_metric_complex_value_serializes.snap
---
source: coglet/src/bridge/protocol.rs
expression: resp
---
{
  "type": "metric",
  "name": "timing",
  "value": {
    "inference": 0.8,
    "preprocess": 0.1
  },
  "mode": "replace"
}
