crates/coglet/src/bridge/snapshots/coglet__bridge__protocol__tests__slot_metric_delete_serializes.snap
---
source: coglet/src/bridge/protocol.rs
expression: resp
---
{
  "type": "metric",
  "name": "unwanted",
  "value": null,
  "mode": "replace"
}
