crates/coglet/src/bridge/snapshots/coglet__bridge__protocol__tests__slot_metric_increment_serializes.snap
---
source: coglet/src/bridge/protocol.rs
expression: resp
---
{
  "type": "metric",
  "name": "token_count",
  "value": 1,
  "mode": "increment"
}
