crates/coglet/src/bridge/snapshots/coglet__bridge__protocol__tests__slot_metric_replace_serializes.snap
---
source: coglet/src/bridge/protocol.rs
expression: resp
---
{
  "type": "metric",
  "name": "temperature",
  "value": 0.7,
  "mode": "replace"
}
