crates/coglet/src/bridge/snapshots/coglet__bridge__protocol__tests__slot_output_serializes.snap
---
source: coglet/src/bridge/protocol.rs
expression: resp
---
{
  "type": "output",
  "output": "chunk 1"
}
