crates/coglet/src/bridge/snapshots/coglet__bridge__protocol__tests__slot_predict_file_input_serializes.snap
---
source: coglet/src/bridge/protocol.rs
expression: req
---
{
  "type": "predict",
  "id": "pred_456",
  "input_file": "/tmp/coglet/predictions/pred_456/inputs/spill_abc.json",
  "output_dir": "/tmp/coglet/predictions/pred_456/outputs"
}
